--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,7 +159,7 @@
         android:layout_marginTop="64dp"
         android:ems="10"
         android:hint="@string/string_etOperationLeft"
-        android:inputType="text"
+        android:inputType="number|numberDecimal|numberSigned"
         android:minHeight="48dp"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -172,7 +172,7 @@
         android:layout_marginStart="15dp"
         android:ems="10"
         android:hint="@string/string_etOperationRight"
-        android:inputType="text"
+        android:inputType="number|numberDecimal|numberSigned"
         android:minHeight="48dp"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tvOperationSign"
